# mix-coding

./: .codeguardian.yaml  .env.example  .gitignore  .honeytools.json  .mcp.json  .mcp.json.full  .tool-whitelist.json  ARCHITECTURE.md  CLAUDE.md  CodeGuardian_完整项目文档.md  INSTALL.md  LICENSE  README.md  README_EN.md  audit-proxy.bat  codewhale-config.toml  eslint.config.js  express-sec-audit-2026-06-12T14-35-02-527Z.txt  express-sec-audit-2026-06-14T01-16-19-697Z.txt  fix.bat  fix.sh  install-tools.bat  install-tools.sh  install.sh  opencode.jsonc  package-lock.json  package.json  playwright.config.ts  react-doctor.config.json  requirements.txt  restart-claude.bat  start-claude.bat  start-claude.ps1  start-claude.sh  start-codewhale.bat  tailwind.config.js  update-all.bat  update-all.sh  upgrade.bat  upgrade.sh  (+1 more)
.claude/: mcp-enable.json  mcp.json  memory.json  opendigger.json  system-prompt.txt  workflow-config.md
claude-scene/: .dockerignore  .env.example  .express-sec-audit-cache.json  .gitignore  .lighthouserc-ci.json  .noleakrc.json  .restic-env.example  .tool-whitelist.json  .upptimerc.yml  CHANGELOG.md  Dockerfile  Taskfile.yml  api-consistency-report.md  backup.ps1  check-imports.js  clearible-report.mdx  docker-compose.yml  eslint.config.js  express-sec-audit-2026-06-12T14-33-09-263Z.txt  express-sec-audit-2026-06-12T14-51-31-688Z.txt  express-sec-audit-2026-06-12T15-08-13-634Z.txt  express-sec-audit-2026-06-12T15-14-01-631Z.txt  express-sec-audit-2026-06-12T15-20-08-440Z.txt  express-sec-audit-2026-06-12T15-37-41-677Z.txt  express-sec-audit-2026-06-12T22-49-40-523Z.txt  express-sec-audit-2026-06-12T23-39-46-127Z.txt  express-sec-audit-2026-06-12T23-47-43-185Z.txt  (+29 more)
codeguardian/: README.md  pyproject.toml
codeguardian/src/codeguardian/: __init__.py  cli.py
codeguardian/src/codeguardian/core/: config.py  guardian.py  result.py
codeguardian/src/codeguardian/mcp/: server.py
codeguardian/tests/: test_guardian.py
(+466 files in other folders)
