[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codeguardian"
version = "0.1.0"
description = "AI Code Optimization Guardian - Prevent Over-Optimization"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "CodeGuardian Team"}
]
keywords = ["ai", "code-optimization", "mcp", "claude", "guardrails"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "gitpython>=3.1.0",
    "pytest>=7.0.0",
    "pytest-benchmark>=4.0.0",
    "psutil>=5.9.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
codeguardian = "codeguardian.cli:main"
cg = "codeguardian.cli:main"

[project.urls]
Homepage = "https://github.com/your-org/codeguardian"
Documentation = "https://github.com/your-org/codeguardian#readme"
Repository = "https://github.com/your-org/codeguardian"
Issues = "https://github.com/your-org/codeguardian/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/codeguardian"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM"]
ignore = ["D100", "D104"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
